# PDP

./: .flake8  .gitignore  PDP.py  README.md  RMDP.py  config.py  config.toml  main.py  main_pdp.py  pdp_ortools.py  pygameExample.py  pyproject.toml  setting.py  solver_params.json
Math/: Geometry.py  distance.py  nextPermutation.py
docs/: init.md
docs/wiki/: API-Reference.md  Architecture.md  Configuration.md  Dataset.md  Home.md  OR-Tools-Solver.md
fake_data/: data_insert.py
generatingData/: generateTestData.py
model/: driver.py  node.py  order.py  restaurant.py
pdp/: __init__.py  cli.py  config.py  constraints.py
pdp/data/: loaders.py
pdp/models/: __init__.py  data_model.py  node.py  order.py  restaurant.py  result.py  route.py
pdp/solvers/: __init__.py  base.py  ortools_solver.py
pdp/utils/: distance.py  matrices.py
tests/: conftest.py  test_config.py  test_constraints.py  test_data_loaders.py  test_matrices.py  test_models.py  test_node.py  test_ortools_solver.py  test_pdp_constraints.py  test_pdp_data.py  test_pdp_ortools.py
