[project]
name = "pdp"
version = "0.2.0"
description = "Pick-up and Delivery Problem solver using Google OR-Tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15.6755",
]

[project.scripts]
pdp-solve = "pdp.cli:main"

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
